<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="5dp" >

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

        <TextView
            style="@style/edit_post_form_label"
            android:text="@string/url" />

        <EditText
            android:id="@+id/etUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:singleLine="true" />

        <TextView
            android:id="@+id/tvUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:singleLine="true"
            android:text="http://google.com"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />

        <TextView
            style="@style/edit_post_form_label"
            android:text="@string/description" />

        <EditText
            android:id="@+id/etDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />

        <TextView
            style="@style/edit_post_form_label"
            android:text="@string/extended" />

        <EditText
            android:id="@+id/etExtended"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none"
            android:maxLines="3" />

        <TextView
            style="@style/edit_post_form_label"
            android:text="@string/tags" />

        <EditText
            android:id="@+id/etTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/cbPrivate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/private_link" />
    </LinearLayout>

</ScrollView>